# variant-extractor

./: .buildinfo  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  all_diff  another.ipynb  bloc.txt  changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requeriments_docs.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  setup_package.py  test-ld.py  test.ipynb  text.txt  variant_extractor.html  variant_normalizator.py
.doctrees/: changelog.doctree  environment.pickle  index.doctree  variant_extractor.doctree
.github/workflows/: docs.yml  main.yml
_modules/: collections.html  index.html
_modules/variant_extractor/: VariantExtractor.html  variants.html
_sources/: index.rst.txt
_static/: documentation_options.js
docs/source/: conf.py  variant_extractor.rst
examples/: .gitignore  normalize_vcf.py  vcf_to_bamsurgeon.py  vcf_to_csv.py
examples/input_test_data/: test_paired.vcf  truthtest.vcf  truthtest_paired.vcf
src/variant_extractor/: VariantExtractor.py  __init__.py  _common.py  _parser.py  utils.py  variants.py
src/variant_extractor/private/: _PendingBreakends.py  _common.py  _parser.py  _utils.py
