[metadata]
name = variant-extractor
version = 0.0.1
author = Rapsssito
author_email = contact@rodrigomartin.dev
description = Extractor of INDELs, SNVs and SVs from VCF files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Rapsssito/variant-extractor
project_urls =
    Bug Tracker = https://github.com/Rapsssito/variant-extractor/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    pysam

[options.packages.find]
where = src
